--- a/coursesPaginatedCrud.yml
+++ b/coursesPaginatedCrud.yml
@@ -2,11 +2,13 @@ spring:
   application:
     name: coursesPaginatedCrud
   datasource:
-    url: jdbc:mysql://localhost:3306/training
-    username: root
-    password: password
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:postgresql://localhost:5432/training
+    username: postgres
+    password: docker
   jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
       ddl-auto: update
     show-sql: true
